# SDL-CMake-GL

./: .gitignore  CMakeLists.txt  README.md
VS-CMake-SDL/: main.cpp
assets/shaders/: f.glsl  v.glsl
cmake/Modules/: FindPackageHandleStandardArgs.cmake  FindSDL2_image.cmake
include/App/: App.h  EngineBase.h  Window.h
include/GL/: BufferTarget.h  RawBuffer.h  Shader.h  Texture.h  shader.h
include/Graphics/: Basic-Renderer.h  Camera.h  Renderer.h
include/Mesh/: Mesh.h  RectangleMesh.h
include/Model/: BaseMesh.h  Model.h  RectMesh.h
include/Platform/: Resource.h
include/Util/: GL.h  Random.h  glm.h
include/app/: app.h  window.h
include/components/: component.h  input.h  transform.h
include/game/: player.h
include/math/: vec2.h
include/platform/: resource.h
include/util/: glm.h
res/shaders/: default-fsh.glsl  default-vsh.glsl  f.glsl  v.glsl
src/: CMakeLists.txt  main.cpp
